--- a/trs/tr1/parmes.org-tr-1-rev-1.lyx
+++ b/trs/tr1/parmes.org-tr-1-rev-1.lyx
@@ -3230,7 +3230,7 @@ Runtime [s]
 \begin_inset Text
 
 \begin_layout Plain Layout
-16.7
+16.2
 \end_layout
 
 \end_inset
@@ -3239,7 +3239,7 @@ Runtime [s]
 \begin_inset Text
 
 \begin_layout Plain Layout
-3.9
+2.0
 \end_layout
 
 \end_inset
@@ -3306,6 +3306,27 @@ Pipe impact: runtime and storage comparison
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+TODO:
+\end_layout
+
+\begin_layout Itemize
+effect of damping
+\end_layout
+
+\begin_layout Itemize
+effect of time step
 \end_layout
 
 \end_inset
